feat: 引入WorkspaceBridge抽象,工具IO与命令执行可路由至Docker沙箱
- 新增WorkspaceBridge/ProcessRunner/LocalWorkspaceBridge,Workspace默认bridge()挂载本地实现
- 重构read_file/edit_file/terminal执行器与PatchManager.applyPatch,全部经bridge进行IO,不再直接操作宿主机
- 新增DockerWorkspace/DockerWorkspaceBridge(docker exec/docker cp实现沙箱)
- 修复会话存储: ConversationManager补齐save落盘,消息实体补Jackson构造器,Redis类型信息策略改EVERYTHING
- 修复JsonConfig共享mapper的多态类型信息导致工具参数解析失败的问题
- example新增会话删除/健康检查接口及docker沙箱接入配置